# stv-renew

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  START_HERE.md  conflict_records_template.csv  evidence_claim_map_template.csv  execution_config.md  interview_script_templates.md  mvp_delivery_checklist.md  question_bank_template.csv  sample_template.csv  scoring_guide.md  search_keywords.md  tencent_pc_ai_interview_research_plan_v2.md  vcpkg.json  week1_checklist.md  week1_links_master.csv  week1_seed_links.md  week1_summary.md  week2_to_week6_checklist.md
.cache/clangd/index/: cancel_token.cpp.2A07FD8B37CE7E90.idx  cancel_token.cpp.FE522F064AB0B9D5.idx  cancel_token.h.41583452CD8F0FB8.idx  cancel_token.h.4CA34E2AD06CC428.idx  http_client.cpp.59C6C317DA41AFFB.idx  http_client.h.4C6283FAC9EBF7A2.idx  http_client_test.cpp.F439D77830561A10.idx  logger.cpp.2F5F3C3285444CA3.idx  logger.cpp.31A50ACEE01AE98D.idx  logger.h.7326A8DD121D247F.idx  logger.h.B005D98FED9E1531.idx  orchestrator.cpp.225333D32D2F7D59.idx  orchestrator.cpp.A125EFD4A5379081.idx  orchestrator.h.97714C47BA31C30F.idx  orchestrator.h.E35D08EF01484582.idx  pipeline.cpp.0F1652B59E95FAC7.idx  pipeline.cpp.961A27C8ADD14247.idx  pipeline.h.D30D361D05B2ABCB.idx  pipeline.h.DDCE9F952BF0DE47.idx  result.h.E27DB42BC9FE02B9.idx  result.h.FAF1FD217FA14D06.idx  scheduler.cpp.00C1AD8AD679CF42.idx  scheduler.cpp.D64605A6A1623B71.idx  scheduler.h.7EC953E408CD240A.idx  scheduler.h.BC711018D6AC25DD.idx  task.cpp.BCE13069649BEA19.idx  task.cpp.E7A71030C27FB302.idx  task.h.441B6B36F2B4EA35.idx  task.h.B5981921091F69F4.idx  task_error.h.25CE84404136C7A1.idx  task_error.h.2F2B39AE6B81A03E.idx  test_pipeline.cpp.58AE50AFA6F9CA7E.idx  test_pipeline.cpp.A7FCDDD720ACB0CA.idx  test_scheduler.cpp.A87BCC21AEEC6A4C.idx  test_scheduler.cpp.EB18CB1E058D821D.idx  test_task_state_machine.cpp.802A57D361634B5D.idx  test_task_state_machine.cpp.FC801B22E08CA78E.idx
.github/workflows/: ci.yml
app/: CMakeLists.txt  qml.qrc
app/include/app/: asset_presenter.h  auth_presenter.h  export_presenter.h  job_presenter.h  presenter.h  project_presenter.h  storyboard_presenter.h
app/qml/: AssetLibraryPage.qml  CreatePage.qml  ExportPage.qml  LoginPage.qml  ProgressPage.qml  ProjectEditorPage.qml  ProjectListPage.qml  StoryboardPage.qml  main.qml
app/src/: asset_presenter.cpp  auth_presenter.cpp  export_presenter.cpp  job_presenter.cpp  main.cpp  presenter.cpp  project_presenter.cpp  storyboard_presenter.cpp
cmake/: CompilerWarnings.cmake
cmake/packaging/: macos.cmake  windows.cmake
core/: CMakeLists.txt
core/include/core/: cancel_token.h  logger.h  orchestrator.h  pipeline.h  result.h  scheduler.h  task.h  task_error.h
core/include/core/remote/: dto.h  platform_types.h
core/src/: cancel_token.cpp  orchestrator.cpp  pipeline.cpp  scheduler.cpp  task.cpp  thread_pool_scheduler.cpp
docs/: CI_MATRIX.md  CROSS_PLATFORM_COMPAT_PLAN.md  IMPLEMENTATION_STATUS.md  INTERVIEW_PREP.md  LLM_PROMPT.md  M2_ACCEPTANCE.md  M2_PROGRESS.md  M3_SCHEDULER_DESIGN.md  OBSERVABILITY.md  PERF_BASELINE.md  PHASE1_MVP_IMPLEMENTATION_GUIDE.md  PLAN_REVIEW_REPORT.md  PLATFORM_LINUX.md  PLATFORM_MACOS.md  PLATFORM_WINDOWS.md  RELEASE_SIGNING_NOTARIZATION.md  SETUP_WINDOWS.md  TECHNICAL_DECISIONS.md
docs/reports/: M2_perf.md  M2_perf_gpu.md  M3_perf.md
infra/: CMakeLists.txt
infra/include/infra/: api_client.h  config.h  curl_http_client.h  http_client.h  logger.h  path_service.h  sse_client.h  stage_factory.h  stages.h  token_storage.h
infra/src/: api_client.cpp  curl_http_client.cpp  curl_http_client_stub.cpp  http_client.cpp  logger.cpp  sse_client.cpp  stages.cpp  token_storage.cpp
infra/src/platform/: path_service_unix.cpp  path_service_windows.cpp
packaging/windows/: installer.wxs
scripts/: README.md  bench_m2.py  bench_m3.py  check_dependencies.sh  quick-fix-windows.ps1  setup-windows.ps1  test_build.sh  test_e2e_mock.sh
scripts/macos/: sign_and_notarize.sh
scripts/symbols/: upload_symbols.sh
server/: Dockerfile  README.md  docker-compose.yml  go.mod  requirements-gpu.txt  requirements.txt
server/app/: __init__.py  main.py  schemas.py
server/app/providers/: base.py  local_gpu.py  mock.py
server/app/services/: ffmpeg_compose.py  task_registry.py
server/cmd/stv-server/: main.go
server/configs/: config.example.yaml
server/internal/api/: handlers_assets_exports.go  handlers_auth.go  handlers_client.go  handlers_jobs.go  handlers_projects.go  middleware.go  response.go  server.go  server_test.go
server/internal/auth/: service.go  service_test.go
server/internal/config/: config.go
server/internal/events/: hub.go
server/internal/job/: service.go  service_test.go
server/internal/model/: types.go
server/internal/provider/: provider.go
server/internal/store/: memory_store.go
server/migrations/: 0001_init.sql
server/openapi/: openapi.yaml
tests/: CMakeLists.txt  curl_http_client_test.cpp  http_client_test.cpp  test_orchestrator.cpp  test_path_service.cpp  test_pipeline.cpp  test_scheduler.cpp  test_task_state_machine.cpp  test_thread_pool_scheduler.cpp  test_token_storage.cpp
